# advent2020

./: .gitignore  README.md
haskell/: .hlint.yaml  advent2020.cabal  hie.yaml
haskell/cmd/Advent2020/: Main.hs
haskell/src/Advent2020/: Day2.hs  day1.hs
