cabal-version:       3.0
name:                advent2020
version:             0.1.0.0
author:              Emily Zhang
maintainer:          mlyzhng@gmail.com

common lang
  build-depends:      base >=4.12 && <4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeOperators

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

  build-depends:      relude ==0.7.0.0

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules: Advent2020.Day1
  build-depends: split >= 0.2.2

executable advent2020
  import:          lang
  main-is:         Main.hs
  hs-source-dirs:     cmd/advent2020
  -- cabal-fmt: expand cmd/advent2020 -Main
  -- other-modules:
  -- other-extensions:
  build-tool-depends: hspec-discover:hspec-discover ==2.7.1
  build-depends:
    , optparse-applicative  ==0.16.1.0
    , advent2020
  ghc-options:        -threaded -with-rtsopts=-N
  -- hs-source-dirs:
  default-language:    Haskell2010
